# wis_project

./: setup.sh
apps/threads/: .mbed  .mbedignore  custom_targets.json  main.cpp
libs/proto/: proto.h
libs/proto/tests/: CMakeLists.txt  README.md  proto_test.cpp
tools/debug/vscode/scripts/: launch.json  tasks.json
